2001-09-24  Al Riddoch  <alriddoch@zepler.org>

	* src/Net/Stream.cc: Re-wrote client greeting code so it is more
	  efficient, as described by Damien McGinnes.

2001-07-02  Al Riddoch  <alriddoch@zepler.org>

	* src/Message/Object.h: Removed memory pool as it causes crashes
	  in optimised build.

	* Set version number to 0.4.3.1.

2001-06-25  Al Riddoch  <alriddoch@zepler.org>

	* Incremented version to 0.4.3 for release.

2001-06-24  Al Riddoch  <alriddoch@zepler.org>

	* src/Codecs/Packed.cc: Fixed problem with Packed codec because
	  packed does not have a streambegin encoding.

	* src/Net/Stream.cc: Fixed bug so that Packed is used if it
	  is negotiated.

2001-05-20  Al Riddoch  <alriddoch@zepler.org>

	* src/Objects/Root.cc, src/Objects/Operation/Operation.cc,
	  src/Objects/Entity/Entity.cc: Fixed std:: namespace errors
	  discovered when using a strict ISO C++ compiler.

2001-05-14  Al Riddoch  <alriddoch@zepler.org>

	* 0.4.2 released

	* Ensured that version is set to 0.4.2 in all files.

	* HACKING, NEWS, README: Updated for 0.4.2 release

2001-05-10  Al Riddoch  <alriddoch@zepler.org>

	* src/Objects/Operation/Operation.cc, src/Objects/Entity/Entity.cc,
	  src/Objects/Root.cc, gen_cc.py: Static attributes are now
	  constructed in the traditional C++ way.

	* Updated copyright dates.

	* configure.in, */Makefile.am: Added library interfave versioning.

2001-05-09  Al Riddoch  <alriddoch@zepler.org>

	* src/Net/Stream.cc: Nodified negotiation code so that Packed is
	  the default if it is available.

	* src/Net/Stream.h: Added forward declararion of Bridge which can
	  be required.

	* src/Objects/Root.*: Removed redundant includes.
	  Removed initialisation of empty lists and strings. Add protected
	  constructor to Root class that accepts strings for id and
	  parents.

	* src/Objects/gen_cc.py, src/Object/Operation/*, src/Objects/Entity/*:
	  Modified gen_cc.py to make the following changes to entity and
	  operation classes: